- fixed background results images layout issue on desktop monitors
- changed button style

- adjusted font sizes for desktops

--- a/src/Sass/about.scss
+++ b/src/Sass/about.scss
@@ -1,7 +1,7 @@
 @use "./variables";
 
 .about_wrapper {
-    max-width: 1000px;
+    max-width: 1400px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -19,4 +19,15 @@
 footer {
     font-size: 12px;
     line-height: 18px;
+}
+
+@media screen and (min-width: 1200px) {
+    .about_wrapper {
+        font-size: 1.35rem;
+    }
+
+    footer {
+        font-size: 0.95rem;
+        line-height: 2rem;
+    }
 }
