--- a/src/Sass/app.scss
+++ b/src/Sass/app.scss
@@ -13,10 +13,10 @@
 
 }
 
-/* #root {
-    overflow:hidden;
+#root {
+    height: 100vh;
 
-} */
+}
 
 body {
     font-family: variables.$font;
