--- a/src/Sass/questions.scss
+++ b/src/Sass/questions.scss
@@ -138,16 +138,16 @@ button[disabled]:hover {
 }
 
 button {
-    background: rgb(2,0,36);
-    background: linear-gradient(172deg, rgba(2, 0, 36, 0.95) 22%, rgba(57, 124, 91, 0.48) 56%, rgba(46, 82, 137, 0.4133986358) 92%);
-    color: white;
+    background: rgba(0, 0, 0, 0.38);
+/*     background: linear-gradient(172deg, rgba(2, 0, 36, 0.95) 22%, rgba(57, 124, 91, 0.48) 56%, rgba(46, 82, 137, 0.4133986358) 92%);
+ */    color: white;
     border-radius: 10px;
     border: none;
     height: 2.5rem;
     width: 4.6rem;
     -webkit-box-shadow: 1px 1px 19px 3px rgba(228, 228, 228, 0.52);
     -moz-box-shadow: 1px 1px 19px 3px rgba(228, 228, 228, 0.52);
-    box-shadow: 1px 1px 19px 3px rgba(228, 228, 228, 0.52);
+    box-shadow: 1px 1px 19px 3px rgba(228, 228, 228, 0.08);
     font-size: 1rem;
     letter-spacing: 0.1rem;
 }
@@ -179,11 +179,31 @@ legend {
     .question-wrapper {
         max-width: 800px;
     }
+
+    legend {
+        font-size: 1.7rem;
+    }
     
     fieldset {
         padding: 3rem;
+        width: 800px;
         max-width: 800px;
         max-height: 900px;
+        height: 500px;
+
+    }
+
+    .radio-set {
+
+        span, label {
+            font-size: 1.2rem;
+        }
+    }
+
+    button {
+        height: 3.5rem;
+        width: 8rem;
+        font-size: 1.2rem;
     }
 }
 @media screen and (min-width: 2000px) {
